[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/World/World.gd" type="Script" id=1]
[ext_resource path="res://Scenes/World/Background.gd" type="Script" id=2]
[ext_resource path="res://Scenes/World/UI.gd" type="Script" id=3]
[ext_resource path="res://Scripts/StaminaSystem.gd" type="Script" id=4]
[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=5]
[ext_resource path="res://Scripts/LevelManager.gd" type="Script" id=6]
[ext_resource path="res://Scripts/GameData.gd" type="Script" id=7]
[ext_resource path="res://Resources/ElfStats.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Revival.gd" type="Script" id=9]
[ext_resource path="res://Objects/Elf/Elf.tscn" type="PackedScene" id=10]
[ext_resource path="res://Objects/Dwarves/DwarvesSpawner/DwarvesSpawner.tscn" type="PackedScene" id=11]
[ext_resource path="res://Objects/EventItem/EventItemSpawner.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Tavern/TavernScreen.tscn" type="PackedScene" id=13]
[ext_resource path="res://Objects/Potions/Health/HealthPotion.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scripts/GameSaver.gd" type="Script" id=15]
[ext_resource path="res://Objects/Background/Other/sky.png" type="Texture" id=16]
[ext_resource path="res://Objects/Background/Other/frontGrass.png" type="Texture" id=17]
[ext_resource path="res://Objects/Background/Other/backGrass.png" type="Texture" id=18]
[ext_resource path="res://Objects/Background/Other/path.png" type="Texture" id=19]
[ext_resource path="res://Objects/Background/Other/rocks.png" type="Texture" id=20]
[ext_resource path="res://bush.png" type="Texture" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 537.558, 30.0002 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Background" type="Node2D" parent="."]
script = ExtResource( 2 )
num_of_layers = 2
move_speed = 70.0
tree_seperation = 250.0

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="UI"]
editor/display_folded = true
anchor_right = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = 985.0
margin_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
editor/display_folded = true
margin_right = 945.0
margin_bottom = 98.0
custom_constants/separation = 10

[node name="CenterContainer" type="CenterContainer" parent="UI/MarginContainer/VBoxContainer"]
margin_right = 945.0
margin_bottom = 14.0

[node name="LevelLabel" type="Label" parent="UI/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 438.0
margin_right = 506.0
margin_bottom = 14.0
text = "Poziom 10"

[node name="CenterContainer2" type="CenterContainer" parent="UI/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 945.0
margin_bottom = 38.0

[node name="KilledDwarvesLabel" type="Label" parent="UI/MarginContainer/VBoxContainer/CenterContainer2"]
margin_left = 458.0
margin_right = 487.0
margin_bottom = 14.0
text = "1 / 5"

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 945.0
margin_bottom = 98.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 945.0
margin_bottom = 50.0

[node name="GoldLabel" type="Label" parent="UI/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 945.0
margin_bottom = 14.0
text = "Zloto: 0"

[node name="XpLabel" type="Label" parent="UI/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 945.0
margin_bottom = 32.0
text = "Doswiadczenie: 0"

[node name="SilverMoonLabel" type="Label" parent="UI/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 945.0
margin_bottom = 50.0

[node name="TavernEnterBtn" type="CheckButton" parent="UI"]
margin_left = 895.684
margin_top = 72.6317
margin_right = 978.684
margin_bottom = 115.632

[node name="TavernLabel" type="Label" parent="UI/TavernEnterBtn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -81.8158
margin_top = -55.7368
margin_right = 81.1842
margin_bottom = -23.7368
text = "Wejdz do tawerny:"
align = 1

[node name="RevivalEnterBtn" type="CheckButton" parent="UI"]
margin_left = 755.684
margin_top = 72.6317
margin_right = 838.684
margin_bottom = 115.632

[node name="TavernLabel" type="Label" parent="UI/RevivalEnterBtn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -81.8158
margin_top = -55.7368
margin_right = 81.1842
margin_bottom = -23.7368
text = "Przywolaj diabla:"
align = 1

[node name="StaminaLab" type="Label" parent="UI"]
margin_left = 384.0
margin_top = 106.0
margin_right = 573.0
margin_bottom = 144.0
rect_scale = Vector2( 1.4, 1.4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "9.9s / 10s"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="GameManager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="LevelManager" type="Node" parent="."]
script = ExtResource( 6 )

[node name="GameData" type="Node" parent="."]
script = ExtResource( 7 )

[node name="ElfStats" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Revival" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Elf" parent="." instance=ExtResource( 10 )]
position = Vector2( 121.06, 544.182 )

[node name="DwarvesSpawner" parent="." instance=ExtResource( 11 )]
position = Vector2( 1081.97, 544.587 )

[node name="EventItemSpawner" parent="." instance=ExtResource( 12 )]

[node name="Ground" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 569.18, 577.345 )
collision_layer = 32
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource( 1 )

[node name="TavernScreen" parent="." instance=ExtResource( 13 )]

[node name="PotionsContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 506.842
margin_right = 1024.0
margin_bottom = 538.842
alignment = 1

[node name="HealthPotion" parent="PotionsContainer" instance=ExtResource( 14 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 496.0
margin_right = 528.0
margin_bottom = 32.0
rect_scale = Vector2( 1, 1 )

[node name="GameSaver" type="Node" parent="."]
script = ExtResource( 15 )

[node name="sky" type="Sprite" parent="."]
position = Vector2( 511.63, 287.253 )
scale = Vector2( 2, 2 )
z_index = -20
texture = ExtResource( 16 )

[node name="frontGrass2" type="Sprite" parent="."]
position = Vector2( 511.63, 235.053 )
scale = Vector2( 2, 2 )
z_index = -11
texture = ExtResource( 17 )

[node name="backGrass" type="Sprite" parent="."]
position = Vector2( 512.499, 321.797 )
scale = Vector2( 2, 2 )
z_index = -9
texture = ExtResource( 18 )

[node name="path" type="Sprite" parent="."]
position = Vector2( 512.31, 292.933 )
scale = Vector2( 2, 2 )
z_index = -6
texture = ExtResource( 19 )

[node name="rocks" type="Sprite" parent="."]
position = Vector2( 511.63, 294.253 )
scale = Vector2( 2, 2 )
z_index = -5
texture = ExtResource( 20 )

[node name="frontGrass" type="Sprite" parent="."]
position = Vector2( 512.404, 297.312 )
scale = Vector2( 2, 2 )
z_index = 10
texture = ExtResource( 17 )

[node name="bush" type="Sprite" parent="."]
position = Vector2( 244.22, 473.968 )
scale = Vector2( 0.4245, 0.4245 )
z_index = -10
texture = ExtResource( 21 )

[node name="bush2" type="Sprite" parent="."]
position = Vector2( 733.783, 525.41 )
scale = Vector2( 0.4245, 0.4245 )
z_index = 3
texture = ExtResource( 21 )

[connection signal="pressed" from="UI/TavernEnterBtn" to="UI" method="_on_TavernEnterBtn_pressed"]
[connection signal="pressed" from="UI/RevivalEnterBtn" to="UI" method="_on_RevivalEnterBtn_pressed"]
